# CPPS

./: .gitignore  README.md  alignment.cpp  gitTestingUbuntu.txt  map.cpp  testing.cpp  testingPython.py
CPP/CookBook/Data Structure Related/: BIT max-min.txt  LCA cp3.txt  MO's algorithm.txt  Rope-stl.txt  Segmented Tree Generic.txt  hungarian algo.txt  segment tree shafaet.txt
CPP/CookBook/Mathematical Stuffs/: a-2.txt
CookBooks-Docs-N-Stuff/: template.cpp  template.py
CookBooks-Docs-N-Stuff/Data Structure Related/: Segment Tree.cpp  prefix trie.txt
CookBooks-Docs-N-Stuff/Dynamic Programming Related/: LIS -iterative nlogk.txt  max 1d range sum.txt  max 2d range sum O(n^3).txt
CookBooks-Docs-N-Stuff/Mathematical Stuffs/: mathematical formula.txt  matrix expo.txt
CookBooks-Docs-N-Stuff/Number Theory Related/: derangement.txt  extended euclid.txt
CookBooks-Docs-N-Stuff/String Related/: KMP.txt  KMP_Implementation.cpp  in.txt
Online Judges/leetcode/: template.py
Python/CookBook/: template.py
atCoder/: in.txt
pylib/: .pre-commit-config.yaml  pyproject.toml
pylib/pylib/: template.py
pylib/pylib/data_structures/: disjoint_set.py  graph.py  hashtable.py  linked_list.py  tree.py  trie.py
pylib/pylib/dp/: dp.py
pylib/pylib/search_n_sort/: binary_search.py  merge_sort.py
pylib/tests/: test_template.py
pylib/tests/data_structures/: test_disjoint_set.py  test_graph.py  test_hashtable.py  test_linked_list.py  test_tree.py  test_trie.py
pylib/tests/dp/: test_dp.py
pylib/tests/search_n_sort/: test_binary_search.py  test_merge_sort.py
(+149 files in other folders)
