[tool.poetry]
name = "pylib"
version = "0.1.0"
description = ""
authors = ["Arnab Roy <trifiasco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = "pylib"
testpaths = "tests"
addopts = "-v"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
