[tool.poetry]
name = "pylib"
version = "0.1.0"
description = ""
authors = ["Arnab Roy <trifiasco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.3"
pre-commit = "^4.1.0"
mypy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "pylib"
testpaths = "tests"
addopts = "-v"

[tool.mypy]
python_version = "3.12"  # Adjust to your Python version
strict = true
ignore_missing_imports = true
exclude = ["^tests/"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
